Change accordion menu by Bootstrap native one.

--- a/custompage_gcdmdashboard/resources/style/santos.css
+++ b/custompage_gcdmdashboard/resources/style/santos.css
@@ -28,7 +28,10 @@
     vertical-align: middle;
     float: none;
 }
-	
+.glyphicon { margin-right:10px; }
+.panel-body { padding:0px; }
+.panel-body table tr td { padding-left: 15px }
+.panel-body .table {margin-bottom: 0px; }	
 .voffset  { margin-top: 2px; }
 .voffset1 { margin-top: 5px; }
 .voffset2 { margin-top: 10px; }
