--- a/custompage_gcdmdashboard/resources/style/santos.css
+++ b/custompage_gcdmdashboard/resources/style/santos.css
@@ -40,3 +40,8 @@
 .voffset8 { margin-top: 100px; }
 .voffset9 { margin-top: 150px; }
 
+
+.santosheadertable { 
+	background-color: #538DD5; 
+	color: #FFFFFF 
+}
